--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,6 +1,13 @@
 ---
 resources:
-  -name: GitHub-Repo
+  - name: Github-Repo
     type: git
     source:
       uri: https://github.com/mikespiering/spring-music
+jobs:
+  - name: spring-music-pipeline
+    serial: true
+    public: true
+    plan:
+     - get: Github-Repo
+     - trigger: true
